--- a/css/animals.css
+++ b/css/animals.css
@@ -43,36 +43,49 @@ color: black;
 }
 
 section {
+    
     grid-area: s1;
     background-color:whitesmoke;
     
 }
 
 #img-1 {
+    grid-area: i1;
     display: flex;
-    justify-content: center;
+    justify-content: end;
+    object-fit: fill;
     font-size: 2rem;
+    margin-right: 20px;
+    
     
 }
 
 #img-2 {
+    grid-area: ii;
     display: flex;
-    justify-content: end;
+    justify-content: start;
+    
+    
 }
 
 #img-3 {
-    display: flex;
-    justify-content: start;
-}
-
-#img-4 {
+    grid-area: i3;
     display: flex;
     justify-content: end;
     
 }
 
+#img-4 {
+    grid-area: i4;
+    display: flex;
+    justify-content: start;
+    
+    
+    
+}
+
 section img {
-    height: 40vh;
+    height: 75vh;
 }
 
 section article {
@@ -82,8 +95,6 @@ section article {
 }
 
 #main_text {
-    display: flex;
-    flex-direction: column;
     
    
     font-size: 2rem;
@@ -119,9 +130,43 @@ strong {
 
 footer {
     grid-area: fo;
-    background-color: blue;
+    
+    font-size: 1.5rem;
+    display: grid ;
+    grid-template-areas: "k r v";
+ background-color: white;
 }
 
-#julien {
+#kontakt {
+    grid-area: k;
+    border-style: solid;
+}
+
+#reko {
+    grid-area: r;
+    border-style: solid;
+
+}
+
+#vem {
+    grid-area: v;
+    border-style: solid;
+    
+}
+
+#bild1 {
+    border-radius: 25px;
+    
+}
+
+#bild2 {
+    border-radius: 25px;
+}
+
+#bild3 {
+    border-radius: 25px;
+}
+
+#bild4 {
     border-radius: 25px;
 }
